--- a/index.html
+++ b/index.html
@@ -328,27 +328,27 @@
 
   function answerQuestion(q) {
     const answers = {
-      'warna favorit': 'Warna favorit saya adalah ungu dan biru tua.',
-      'makanan kesukaan': 'Saya suka makan nasi goreng dan bakso.',
-      'pelajaran favorit': 'Pelajaran favorit saya adalah matematika dan komputer.',
-      'cita-cita': 'Cita-cita saya adalah menjadi seorang programmer handal.',
-      'game favorit': 'Game favorit saya adalah Mobile Legends dan Minecraft.',
-      'hewani favorit': 'Hewan favorit saya adalah kucing dan burung.',
-      'lagu favorit': 'Lagu favorit saya adalah lagu-lagu pop dan rock Indonesia.',
-      'hobi aneh': 'Hobi aneh saya adalah mengumpulkan stiker dan bermain catur.',
-      'kalau bosan ngapain': 'Kalau bosan, saya biasanya membaca buku atau mendengarkan musik.',
-      'belajar coding dari mana': 'Saya belajar coding dari YouTube dan artikel online.',
-      'film favorit': 'Film favorit saya adalah Marvel Cinematic Universe dan animasi Pixar.',
-      'makanan berat': 'Makanan berat favorit saya adalah rendang dan soto.',
-      'hobimu selain renang': 'Selain renang, saya suka menggambar dan menulis cerita pendek.',
+      'warna favorit': 'Warna favorit saya adalah ungu dan biru .',
+      'makanan kesukaan': 'Saya suka makan nasi goreng dan mie ayam.',
+      'pelajaran favorit': 'Pelajaran favorit saya adalah ipa dan komputer.',
+      'cita-cita': 'Cita-cita saya adalah menjadi seorang perenang.',
+      'game favorit': 'Game favorit saya adalah free fire , GTA V fivem , samp.',
+      'hewani favorit': 'Hewan favorit saya adalah kucing .',
+      'lagu favorit': 'Lagu favorit saya adalah mangu.',
+      'hobi aneh': 'Hobi aneh banyak haha...',
+      'kalau bosan ngapain': 'Kalau bosan, saya biasanya main game.',
+      'belajar coding dari mana': 'Saya belajar coding dari teman dan orang yg sudah jago daru voice discord dan sharescreen.',
+      'film favorit': 'Film favorit saya tidak ada..',
+      'makanan berat': 'Makanan berat favorit saya adalah rendang dan mie ayam.',
+      'hobimu selain renang': 'Selain renang, saya suka menggambar dan belajar hal b5aru.',
       'tempat wisata': 'Tempat wisata favorit saya adalah pantai dan pegunungan.',
-      'film kartun': 'Film kartun favorit saya adalah Upin & Ipin dan Spongebob.',
+      'film kartun': 'Film kartun favorit saya tidak ada.',
       'moto hidup': 'Moto hidup saya adalah "Jangan pernah menyerah dan terus belajar."',
       'kelas berapa': 'Saya sekarang di kelas VIIIE MTsN 1 Palembang.',
       'nama lengkap': 'Nama lengkap saya Athar Novendri.',
       'asal': 'Saya berasal dari Palembang, Sumatera Selatan.',
       'makanan favorit berat': 'Saya sangat suka makan rendang padang.',
-      'lagu favorit berat': 'Saya paling suka lagu “Cinta Luar Biasa” dari Andmesh.',
+      'lagu favorit berat': 'Saya paling suka lagu “Mangu”.',
       'apakah saya cantik': 'Cantik itu relatif, tapi kamu pasti istimewa! 😊',
       'apakah saya ganteng': 'Ganteng itu kamu yang menilai, tapi saya yakin kamu keren! 😄',
     };
