--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       'belajar coding dari mana': 'Saya belajar coding dari teman dan orang yg sudah jago daru voice discord dan sharescreen.',
       'film favorit': 'Film favorit saya tidak ada..',
       'makanan berat': 'Makanan berat favorit saya adalah rendang dan mie ayam.',
-      'hobimu selain renang': 'Selain renang, saya suka menggambar dan belajar hal b5aru.',
+      'hobimu selain renang': 'Selain renang, saya suka menggambar dan belajar hal baru.',
       'tempat wisata': 'Tempat wisata favorit saya adalah pantai dan pegunungan.',
       'film kartun': 'Film kartun favorit saya tidak ada.',
       'moto hidup': 'Moto hidup saya adalah "Jangan pernah menyerah dan terus belajar."',
