--- a/index.html
+++ b/index.html
@@ -236,137 +236,146 @@
     </ul>
   </section>
 
- <section id="ai" class="scroll-left">
-  <h2>🤖 Bot Interaktif</h2>
-  <p>Mau tau lebih tentang Athar? Pilih cara nanya di bawah ini ya 👇</p>
+  <section id="ai" class="scroll-left">
+    <h2>🤖 Bot Interaktif</h2>
+    <p>Mau tau lebih tentang Athar? Pilih cara nanya di bawah ini ya 👇</p>
 
-  <div style="margin-bottom:15px;">
-    <button onclick="showManualInput()" style="padding:10px 20px; background-color:#a788ff; border:none; color:white; border-radius:5px;">Ketik Manual</button>
-    <button onclick="showKeywordList()" style="padding:10px 20px; margin-left:10px; background:#fff; color:#333; border-radius:5px;">Pilih Pertanyaan</button>
-  </div>
+    <div style="margin-bottom:15px;">
+      <button onclick="showManualInput()" style="padding:10px 20px; background-color:#a788ff; border:none; color:white; border-radius:5px;">Ketik Pertanyaan</button>
+      <button onclick="showOptions()" style="padding:10px 20px; background-color:#4caf50; border:none; color:white; border-radius:5px;">Pilih Pertanyaan</button>
+    </div>
 
-  <div id="manualInput" style="display:none;">
-    <input type="text" id="question" placeholder="Tulis pertanyaan di sini..." style="padding:10px; width:100%; margin:10px 0; border-radius:5px;" />
-    <button onclick="askBot()" style="padding:10px 20px; background-color:#a788ff; border:none; color:white; border-radius:5px;">Tanya!</button>
-  </div>
+    <div id="manualInput" style="display:none; margin-bottom:15px;">
+      <input type="text" id="questionInput" placeholder="Ketik pertanyaan kamu di sini..." style="width:80%; padding:8px; font-size:1em;" />
+      <button onclick="handleQuestion()" style="padding:8px 15px; margin-left:10px; background:#a788ff; color:white; border:none; border-radius:5px;">Tanya</button>
+    </div>
 
-  <div id="keywords" style="display:none; background:#111; color:#a0a0a0; padding:15px; border-radius:5px; margin-top:15px;">
-    <strong>❓ Pilih pertanyaan tentang athar:</strong>
-    <ul style="margin-top:10px; list-style:none; padding:0;">
-      <li><button onclick="askDirect('warna favorit')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Warna favorit</button></li>
-      <li><button onclick="askDirect('makanan kesukaan')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Makanan kesukaan</button></li>
-      <li><button onclick="askDirect('pelajaran favorit')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Pelajaran favorit</button></li>
-      <li><button onclick="askDirect('cita-cita')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Cita-cita</button></li>
-      <li><button onclick="askDirect('game favorit')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Game favorit</button></li>
-      <li><button onclick="askDirect('hewani favorit')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Hewan favorit</button></li>
-      <li><button onclick="askDirect('lagu favorit')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Lagu favorit</button></li>
-      <li><button onclick="askDirect('hobi aneh')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Hobi aneh</button></li>
-      <li><button onclick="askDirect('kalau bosan ngapain')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Kalau bosan ngapain</button></li>
-      <li><button onclick="askDirect('belajar coding dari mana')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Belajar coding dari mana</button></li>
-      <li><button onclick="askDirect('film favorit')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Film favorit</button></li>
-      <li><button onclick="askDirect('makanan berat')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Makanan berat</button></li>
-      <li><button onclick="askDirect('hobimu selain renang')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Hobimu selain renang</button></li>
-      <li><button onclick="askDirect('tempat wisata')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Tempat wisata</button></li>
-      <li><button onclick="askDirect('film kartun')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Film kartun</button></li>
-      <li><button onclick="askDirect('moto hidup')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Moto hidup</button></li>
-      <li><button onclick="askDirect('kelas berapa')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Kelas berapa</button></li>
-      <li><button onclick="askDirect('nama lengkap')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Nama lengkap</button></li>
-      <li><button onclick="askDirect('asal')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Asal</button></li>
-      <li><button onclick="askDirect('makanan favorit berat')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Makanan favorit berat</button></li>
-      <li><button onclick="askDirect('lagu favorit berat')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Lagu favorit berat</button></li>
-      <strong>❓ Pilih pertanyaan random tentang diri anda sendiri:</strong>
-      <li><button onclick="askDirect('apakah saya cantik')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Apakah saya cantik</button></li>
-      <li><button onclick="askDirect('apakah saya ganteng')" style="background:#a788ff; border:none; color:white; border-radius:5px; padding:5px 10px; margin:5px;">Apakah saya ganteng</button></li>
-    </ul>
-  </div>
+    <div id="options" style="display:none; margin-bottom:15px;">
+      <select id="presetQuestions" style="width: 80%; padding:8px; font-size:1em;">
+        <option value="">-- Pilih Pertanyaan --</option>
+        <option value="warna favorit">Apa warna favoritmu?</option>
+        <option value="hobi utama">Apa hobi utamamu?</option>
+        <option value="jasa web">Jasa apa yang kamu tawarkan?</option>
+        <option value="cita-cita">Apa cita-citamu?</option>
+      </select>
+      <button onclick="handlePresetQuestion()" style="padding:8px 15px; margin-left:10px; background:#4caf50; color:white; border:none; border-radius:5px;">Tanya</button>
+    </div>
 
-  <div id="answer" style="margin-top:20px; background:#222; padding:15px; border-radius:5px; min-height:80px; font-size:1.1em; color:#eee;"></div>
-</section>
+    <div id="answer" style="margin-top:20px; background:rgba(255,255,255,0.1); padding:15px; border-radius:8px; min-height:60px; font-size:1.1em;"></div>
+  </section>
 
-<script>
-  // JAM DIGITAL
-  function updateClock() {
-    const now = new Date();
-    const timeStr = now.toLocaleTimeString('id-ID', { hour12: false });
-    document.getElementById('clock').textContent = '⏰ Waktu sekarang: ' + timeStr;
-  }
-  setInterval(updateClock, 1000);
-  updateClock();
+  <footer>
+    <p>© 2023 Athar Novendri - All rights reserved.</p>
+  </footer>
 
-  // Mode input yang aktif: 'manual' atau 'keyword'
-  let activeMode = null;
+  <script>
+    // Jam digital
+    setInterval(() => {
+      const now = new Date();
+      const timeString = now.toLocaleTimeString('id-ID', { hour12: false });
+      document.getElementById('clock').textContent = `⏰ Waktu sekarang: ${timeString}`;
+    }, 1000);
 
-  function showManualInput() {
-    activeMode = 'manual';
-    document.getElementById('manualInput').style.display = 'block';
-    document.getElementById('keywords').style.display = 'none';
-    document.getElementById('answer').textContent = '';
-  }
+    // Animasi scroll masuk
+    window.addEventListener('scroll', () => {
+      document.querySelectorAll('.scroll-left').forEach(el => {
+        if (el.getBoundingClientRect().top < window.innerHeight - 100) {
+          el.style.animationPlayState = 'running';
+          el.style.opacity = '1';
+        }
+      });
+      document.querySelectorAll('.scroll-right').forEach(el => {
+        if (el.getBoundingClientRect().top < window.innerHeight - 100) {
+          el.style.animationPlayState = 'running';
+          el.style.opacity = '1';
+        }
+      });
+    });
 
-  function showKeywordList() {
-    activeMode = 'keyword';
-    document.getElementById('keywords').style.display = 'block';
-    document.getElementById('manualInput').style.display = 'none';
-    document.getElementById('answer').textContent = '';
-  }
-
-  function askBot() {
-    let question = '';
-    if (activeMode === 'manual') {
-      question = document.getElementById('question').value.trim().toLowerCase();
+    // Toggle manual input dan pilihan
+    function showManualInput() {
+      document.getElementById('manualInput').style.display = 'block';
+      document.getElementById('options').style.display = 'none';
+      document.getElementById('answer').textContent = '';
     }
-    if (!question) {
-      alert('Tolong tulis pertanyaan terlebih dahulu!');
-      return;
+
+    function showOptions() {
+      document.getElementById('options').style.display = 'block';
+      document.getElementById('manualInput').style.display = 'none';
+      document.getElementById('answer').textContent = '';
     }
-    answerQuestion(question);
-  }
 
-  function askDirect(q) {
-    answerQuestion(q.toLowerCase());
-  }
+    // Fungsi tanya jawab statis + AI
+    async function answerQuestion(q) {
+      const answers = {
+        'warna favorit': 'Warna favorit saya adalah ungu dan biru.',
+        'hobi utama': 'Hobi utama saya adalah berenang dan coding kecil-kecilan.',
+        'jasa web': 'Saya membuka jasa bikin web dengan harga terjangkau khusus pelajar dan umum.',
+        'cita-cita': 'Cita-cita saya adalah menjadi programmer dan desainer handal.',
+      };
 
-  function answerQuestion(q) {
-    const answers = {
-      'warna favorit': 'Warna favorit saya adalah ungu dan biru .',
-      'makanan kesukaan': 'Saya suka makan nasi goreng dan mie ayam.',
-      'pelajaran favorit': 'Pelajaran favorit saya adalah ipa dan komputer.',
-      'cita-cita': 'Cita-cita saya adalah menjadi seorang perenang.',
-      'game favorit': 'Game favorit saya adalah free fire , GTA V fivem , samp.',
-      'hewani favorit': 'Hewan favorit saya adalah kucing .',
-      'lagu favorit': 'Lagu favorit saya adalah mangu.',
-      'hobi aneh': 'Hobi aneh banyak haha...',
-      'kalau bosan ngapain': 'Kalau bosan, saya biasanya main game.',
-      'belajar coding dari mana': 'Saya belajar coding dari teman dan orang yg sudah jago daru voice discord dan sharescreen.',
-      'film favorit': 'Film favorit saya tidak ada..',
-      'makanan berat': 'Makanan berat favorit saya adalah rendang dan mie ayam.',
-      'hobimu selain renang': 'Selain renang, saya suka menggambar dan belajar hal baru.',
-      'tempat wisata': 'Tempat wisata favorit saya adalah pantai dan pegunungan.',
-      'film kartun': 'Film kartun favorit saya tidak ada.',
-      'moto hidup': 'Moto hidup saya adalah "Jangan pernah menyerah dan terus belajar."',
-      'kelas berapa': 'Saya sekarang di kelas VIIIE MTsN 1 Palembang.',
-      'nama lengkap': 'Nama lengkap saya Athar Novendri.',
-      'asal': 'Saya berasal dari Palembang, Sumatera Selatan.',
-      'makanan favorit berat': 'Saya sangat suka makan rendang padang.',
-      'lagu favorit berat': 'Saya paling suka lagu “Mangu”.',
-      'apakah saya cantik': 'Cantik itu relatif, tapi kamu pasti istimewa! 😊',
-      'apakah saya ganteng': 'Ganteng itu kamu yang menilai, tapi saya yakin kamu keren! 😄',
-    };
+      const answerDiv = document.getElementById('answer');
 
-    const ans = answers[q];
-    const answerDiv = document.getElementById('answer');
-    if (ans) {
-      answerDiv.textContent = ans;
-    } else {
-      answerDiv.textContent = 'Maaf, saya belum tahu jawaban untuk pertanyaan itu.Pertanyaan harus sesuai dengan yang ada di pilih pertanyaan';
+      if (answers[q]) {
+        answerDiv.textContent = answers[q];
+      } else {
+        answerDiv.textContent = 'Sedang memproses jawaban AI...';
+
+        try {
+          const aiAnswer = await askChatGPT(q);
+          answerDiv.textContent = aiAnswer;
+        } catch (error) {
+          answerDiv.textContent = 'Maaf, terjadi kesalahan saat menghubungi AI.';
+          console.error(error);
+        }
+      }
     }
-  }
 
-  // Awal halaman: sembunyikan kedua input
-  document.getElementById('manualInput').style.display = 'none';
-  document.getElementById('keywords').style.display = 'none';
+    // Panggil API OpenAI ChatGPT
+    async function askChatGPT(question) {
+      const apiKey = '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'; // Ganti dengan API key-mu (jangan pakai di frontend production)
+      const response = await fetch('https://api.openai.com/v1/chat/completions', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer ' + apiKey
+        },
+        body: JSON.stringify({
+          model: 'gpt-3.5-turbo',
+          messages: [{ role: 'user', content: question }]
+        })
+      });
 
-</script>
+      if (!response.ok) {
+        const err = await response.json();
+        throw new Error(err.error.message);
+      }
+
+      const data = await response.json();
+      return data.choices[0].message.content;
+    }
+
+    // Handle input manual
+    function handleQuestion() {
+      const question = document.getElementById('questionInput').value.trim().toLowerCase();
+      if (question === '') {
+        alert('Tolong ketik pertanyaan dulu ya!');
+        return;
+      }
+      answerQuestion(question);
+    }
+
+    // Handle pilihan pertanyaan
+    function handlePresetQuestion() {
+      const select = document.getElementById('presetQuestions');
+      const question = select.value;
+      if (question === '') {
+        alert('Pilih pertanyaan dulu ya!');
+        return;
+      }
+      answerQuestion(question);
+    }
+  </script>
 
 </body>
 </html>
